<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MyProfile">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="167dp"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profilepic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
         />
    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginTop="165dp"
        android:text="@string/profile_name"
        android:textColor="@color/Textcolor"
        android:textSize="75px"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="338dp"
        android:layout_marginLeft="50px"
        android:layout_marginTop="210dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#050505"
            tools:layout_editor_absoluteY="218dp"
            />
        <TextView
            android:layout_width="377dp"
            android:layout_height="43dp"
            android:textColor="@color/Textcolor"
            android:textStyle="italic"
            android:text="@string/track"
            android:textSize="10pt" />
        <TextView
            android:layout_width="277dp"
            android:layout_height="43dp"
            android:textColor="@color/Textcolor"
            android:textStyle="italic"
            android:text="@string/country"
            android:textSize="10pt" />
        <TextView
            android:layout_width="377dp"
            android:layout_height="43dp"
            android:textColor="@color/Textcolor"
            android:textStyle="italic"
            android:text="@string/email"
            android:textSize="10pt" />
        <TextView
            android:layout_width="377dp"
            android:layout_height="43dp"
            android:textColor="@color/Textcolor"
            android:textStyle="italic"
            android:text="@string/phone_number"
            android:textSize="10pt" />
        <TextView
            android:layout_width="377dp"
            android:layout_height="43dp"
            android:textColor="@color/Textcolor"
            android:textStyle="italic"
            android:text="@string/slack_username"
            android:textSize="10pt" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>